--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p class="subtitle">Your private journal and mental health companion</p>
     </header>
     <div style="text-align:center; margin: 20px 0;">
-      <a href="home.html" class="main-btn">Mental Health and Journal and Chatbot</a>
+      <a href="index.html" class="main-btn">Mental Health and Journal and Chatbot</a>
     </div>
   
     <div class="tabs">
